--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-/mka/.idea
+/.idea
 nbactions.xml
 nb-configuration.xml
 *.iml
 .settings/
 .project
 .tern-project
+target/
 bin/
 tmp/
 **/*.classpath
 **/target/
 **/*.metadata
 **/*.recommenders
-**/target/**
-.classpath
